--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ div#preloader {
 }
 
 .area-padding {
-  padding: 70px 0px 80px;
+  padding: 170px 0px 80px;
 }
 
 .area-padding-2 {
@@ -264,7 +264,7 @@ div#preloader {
   left: 0;
   width: 100%;
   height: auto;
-  background: rgba(0, 0, 0, 0.40);
+  background: rgba(0, 0, 0, 0.80);
   z-index: 9;
 }
 
@@ -491,14 +491,17 @@ div#preloader {
 
 .single-well ul li i {
   color: #3EC1D5;
-  padding-right: 10px;
-  font-size: 12px;
+  padding-right: 15px;
+  font-size: 14px;
 }
 
 .single-well p {
   color: #444;
 }
 
+.history-area .single-well li i{display: block; font-weight: bold; font-size: 14px}
+
+p > b  { color: #ef6f1f;} 
 /*--------------------------------*/
 
 /* 4.Services Area
@@ -544,525 +547,7 @@ div#preloader {
   font-size: 14px;
 }
 
-/*----------------------------------------
-  5.Skill Area
-----------------------------------------*/
 
-.our-skill-area {
-  position: relative;
-}
-
-.our-skill-area {
-  background: rgba(248, 248, 248, 0.8) url("../img/background/bg1.jpg") no-repeat fixed center top / cover;
-}
-
-.test-overly {
-  background: rgba(0, 0, 0, 0.80);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.progress-h4 {
-  color: #fff;
-  font-weight: 500;
-}
-
-/*----------------------------------------
-  6.Faq Area
-----------------------------------------*/
-
-.faq-details .panel-heading {
-  padding: 0;
-}
-
-.panel-default>.panel-heading {
-  background-color: transparent;
-  border: medium none;
-  color: #333;
-}
-
-.faq-details h4.check-title a {
-  color: #333;
-  display: block;
-  font-weight: 700;
-  letter-spacing: 2px;
-  margin-left: 40px;
-  padding: 6px 10px;
-  text-decoration: none;
-}
-
-.panel-body {
-  padding: 15px 15px 0px 50px;
-}
-
-.faq-details h4.check-title {
-  color: #444;
-  font-size: 18px;
-  font-weight: 500;
-  margin-bottom: 0;
-}
-
-.faq-details a span.acc-icons {
-  position: relative;
-}
-
-.faq-details a span.acc-icons::before {
-  color: #333;
-  content: "";
-  font-family: fontawesome;
-  font-size: 24px;
-  height: 40px;
-  left: -51px;
-  line-height: 39px;
-  position: absolute;
-  text-align: center;
-  top: -10px;
-  width: 42px;
-}
-
-.faq-details h4.check-title a.active, .faq-details a.active span.acc-icons::before {
-  color: #3EC1D5;
-}
-
-.faq-details a.active span.acc-icons::before {
-  content: "";
-  font-family: fontawesome;
-  font-size: 24px;
-  height: 40px;
-  left: -51px;
-  line-height: 39px;
-  position: absolute;
-  text-align: center;
-  top: -10px;
-  width: 42px;
-}
-
-.second-row {
-  margin-top: 30px;
-}
-
-.event-content.head-team h4 {
-  background: transparent none repeat scroll 0 0;
-  color: #333;
-  padding: 30px 0 10px;
-  font-weight: 500;
-  text-transform: capitalize;
-}
-
-.tab-menu .nav-tabs>li>a:hover {
-  border-color: #eee #eee #ddd;
-}
-
-.tab-menu {
-  display: block;
-  text-align: center;
-}
-
-.tab-menu ul.nav {
-  margin: 0;
-  padding: 0;
-}
-
-.tab-menu ul.nav li {
-  border: medium none;
-  display: inline-block;
-}
-
-.tab-content {
-  border: 1px solid #ccc;
-  padding: 0 15px 15px;
-}
-
-.tab-menu ul.nav li a {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border-radius: 0;
-  color: #444;
-  display: block;
-  font-weight: 500;
-  margin-right: 5px;
-  padding: 10px 20px;
-  font-family: raleway;
-  font-size: 18px;
-}
-
-.tab-menu ul li.active a, .tab-menu ul li.hover a, .tab-menu ul li.focus a {
-  border-bottom: 1px solid #fff;
-  color: #3EC1D5 !important;
-}
-
-.tab-menu .nav-tabs {
-  border-bottom: none;
-}
-
-.tab-main-img a {
-  position: relative;
-  display: block;
-}
-
-.tab-main-img a:hover span.events-offer {
-  height: 20%;
-}
-
-.tab-main-img a span.events-offer {
-  background: rgba(0, 0, 0, 0.8) none repeat scroll 0 0;
-  bottom: 0;
-  color: #fff;
-  content: "";
-  font-size: 20px;
-  font-weight: 700;
-  height: 0%;
-  left: 0;
-  line-height: 70px;
-  padding: 0;
-  position: absolute;
-  text-align: left;
-  transition: all 0.5s ease 0s;
-  width: 100%;
-  padding: 0px 10px;
-}
-
-/*----------------------------------------
- 7.Wellcome Area Css
-----------------------------------------*/
-
-.wellcome-area {
-  background: rgba(248, 248, 248, 0.8) url("../img/background/bg1.jpg");
-  background-size: cover;
-  background-position: center top;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.well-bg {
-  position: relative;
-}
-
-.wellcome-text {
-  margin: 70px 0;
-  padding: 30px 40px;
-}
-
-.well-text>h2 {
-  color: #fff;
-  font-size: 44px;
-  font-weight: 500;
-  line-height: 50px;
-}
-
-.well-text p {
-  font-size: 18px;
-  font-style: italic;
-  color: #fff;
-}
-
-.wellcome-text .section-headline p {
-  margin-bottom: 0;
-}
-
-.subs-feilds {
-  border: 1px solid #fff;
-  display: inline-block;
-  height: 52px;
-  margin-top: 30px;
-  width: 60%;
-  border-radius: 30px;
-  overflow: hidden;
-}
-
-.suscribe-input input {
-  background: transparent none repeat scroll 0 0;
-  border: medium none;
-  color: #fff;
-  float: left;
-  font-size: 15px;
-  line-height: 24px;
-  padding: 11px 15px;
-  width: 70%;
-  height: 50px;
-}
-
-.suscribe-input button {
-  background: #3ec1d5 none repeat scroll 0 0;
-  border: medium none;
-  border-radius: 0 20px 20px 0;
-  color: #fff;
-  float: left;
-  font-size: 20px;
-  font-weight: 700;
-  padding: 14px 20px;
-  width: 30%;
-}
-
-.suscribe-input button:hover {
-  background: #fff none repeat scroll 0 0;
-  color: #3ec1d5;
-}
-
-/*----------------------------------------
- 8.Team Area Css
-----------------------------------------*/
-
-.team-member {
-  background: rgba(0, 0, 0, 0.65) none repeat scroll 0 0;
-  display: block;
-  margin-right: -15px;
-  padding: 10px;
-  position: relative;
-  overflow: hidden;
-}
-
-.team-member::before {
-  background: rgba(0, 0, 0, 0) url("../img/team/team01.jpg") repeat scroll 0 0;
-  content: "";
-  display: block;
-  height: 100%;
-  left: 0;
-  margin-right: -15px;
-  padding: 10px;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  transition: 5s;
-  transform: scale(1);
-}
-
-.team-member:hover.team-member::before {
-  transform: scale(1.2);
-}
-
-.single-team-member {
-  border: 1px solid #ddd;
-}
-
-.team-left-text h4 {
-  color: #fff;
-  font-size: 30px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.team-left-text p {
-  color: #fff;
-  font-size: 17px;
-  line-height: 26px;
-}
-
-.email-news {
-  display: block;
-  margin: 30px 0;
-  overflow: hidden;
-  text-align: center;
-  width: 100%;
-}
-
-.email-news .email_button input {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #fff;
-  color: #fff;
-  float: left;
-  font-size: 13px;
-  padding: 8px;
-  width: 81%;
-}
-
-.email-news .email_button>button {
-  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #fff;
-  color: #fff;
-  float: left;
-  font-size: 16px;
-  padding: 8px 12px;
-  text-align: center;
-}
-
-.email-news .email_button>button:hover {
-  background: #3EC1D5;
-  border: 1px solid #fff;
-  color: #fff;
-}
-
-.team-left-icon ul li {
-  display: inline-block;
-}
-
-.team-left-icon ul li a:hover {
-  color: #3EC1D5;
-  background: #fff;
-  border: 2px solid #fff;
-}
-
-.team-left-icon ul li a {
-  border: 2px solid #fff;
-  color: #fff;
-  display: block;
-  font-size: 16px;
-  height: 40px;
-  line-height: 37px;
-  margin: 0 3px;
-  width: 40px;
-}
-
-.team-member-carousel .single-team-member {
-  overflow: hidden;
-  width: 100%;
-}
-
-.single-team-member:hover .team-img a:after {
-  opacity: 1;
-}
-
-.single-team-member:hover .team-social-icon {
-  top: 45%;
-  opacity: 1;
-}
-
-.team-img {
-  position: relative;
-}
-
-.team-img>a {
-  display: block;
-}
-
-.team-img>a::after {
-  background: rgba(0, 0, 0, 0.70);
-  bottom: 0;
-  content: "";
-  height: 100%;
-  left: 0;
-  position: absolute;
-  transition: all 0.5s ease 0s;
-  width: 100%;
-  opacity: 0;
-}
-
-.team-social-icon {
-  left: 50%;
-  margin-left: -61px;
-  opacity: 0;
-  position: absolute;
-  top: 30%;
-  transition: 1.3s;
-}
-
-.team-social-icon ul li {
-  display: inline-block;
-}
-
-.team-social-icon ul li a {
-  border: 1px solid #fff;
-  border-radius: 50%;
-  color: #fff;
-  display: block;
-  font-size: 14px;
-  height: 34px;
-  line-height: 35px;
-  margin: 0 3px;
-  width: 34px;
-}
-
-.team-social-icon ul li a:hover {
-  color: #fff;
-  border: 1px solid #3EC1D5;
-  background: #3EC1D5;
-}
-
-.team-content {
-  padding: 10px 0px;
-}
-
-.team-content>h4, .team-content>p {
-  color: #444;
-  margin-bottom: 5px;
-}
-
-.team-content.head-team p {
-  margin-bottom: 0;
-}
-
-.team-left-icon.text-center {
-  margin-bottom: 20px;
-}
-
-.head-team h4 {
-  display: inline-block;
-  font-size: 25px;
-  font-weight: 600;
-  padding-bottom: 10px;
-  text-transform: uppercase;
-}
-
-/*--------------------------------*/
-
-/*  9.review Area
-/*--------------------------------*/
-
-.reviews-area {
-  background: url(../img/background/bg1.jpg);
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  background-attachment: fixed;
-  width: 100%;
-  height: auto;
-  position: relative;
-}
-
-.work-left-text {
-  background: #3EC1D5 none repeat scroll 0 0;
-}
-
-.work-left-text {
-  width: 50%;
-}
-
-.work-right-text {
-  background: rgba(0, 0, 0, 0.8) none repeat scroll 0 0;
-  float: right;
-  height: 100%;
-  overflow: hidden;
-  padding: 71px 0;
-  width: 50%;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.work-right-text h2 {
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 24px;
-}
-
-.work-right-text h5 {
-  color: #fff;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 34px;
-  text-transform: uppercase;
-}
-
-.work-right-text .sus-btn {
-  margin-left: 0;
-  margin-top: 20px;
-}
-
-.single-awesome-4 {
-  display: block;
-  float: left;
-  overflow: hidden;
-  width: 33.33%;
-}
-
-.single-awesome-4 .add-actions {
-  padding: 10px 20px;
-}
 
 /*----------------------------------------
  10.Portfolio Area Css
@@ -1222,358 +707,6 @@ div#preloader {
   width: 100%;
 }
 
-/*----------------------------------------*/
-
-/* 11. Pricing Area
-/*----------------------------------------*/
-
-.pricing-area {
-  background: rgba(0, 0, 0, 0.02) none repeat scroll 0 0;
-}
-
-.pri_table_list {
-  border: 1px solid #ccc;
-  text-align: center;
-  transition: all 0.4s ease 0s;
-  background: #fff;
-}
-
-.pri_table_list h3 span {
-  font-size: 16px;
-}
-
-.pri_table_list ol li {
-  border-bottom: 1px solid #ccc;
-  color: #666;
-  padding: 12px 15px;
-  position: relative;
-  text-align: left;
-}
-
-.pri_table_list li.check.cross::after {
-  content: "\f00d";
-  font-family: fontawesome;
-  font-size: 14px;
-  position: absolute;
-  right: 50px;
-  top: 12px;
-  color: indianred;
-}
-
-.pri_table_list li.check::after {
-  content: "\f00c";
-  font-family: fontawesome;
-  font-size: 14px;
-  position: absolute;
-  right: 50px;
-  top: 12px;
-  color: #3EC1D5;
-}
-
-.pri_table_list button {
-  background: #444 none repeat scroll 0 0;
-  border: 1px solid #444;
-  color: #fff;
-  margin-bottom: 25px;
-  padding: 10px 35px;
-  text-transform: uppercase;
-  transition: all 0.4s ease 0s;
-  border-radius: 30px;
-}
-
-.pri_table_list>h3 {
-  color: #333;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 25px;
-  padding: 30px 0 20px;
-  text-transform: uppercase;
-  transition: all 0.4s ease 0s;
-}
-
-.pri_table_list ol {
-  list-style: outside none none;
-  margin: 0;
-  padding: 0 0 25px;
-}
-
-.pri_table_list.active {
-  transition: all 0.4s ease 0s;
-  position: relative;
-  overflow: hidden;
-}
-
-.saleon {
-  background: #3EC1D5 none repeat scroll 0 0;
-  color: #fff;
-  font-size: 13px;
-  font-weight: 700;
-  left: -26px;
-  padding: 2px 25px;
-  position: absolute;
-  text-transform: uppercase;
-  top: 16px;
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-}
-
-.pri_table_list>button:hover {
-  background-color: #fff;
-  border: 1px solid #333;
-  color: #333;
-}
-
-.active>h3 {
-  background: #f5f5f5 none repeat scroll 0 0;
-  color: #333;
-  transition: all 0.4s ease 0s;
-}
-
-.active>button {
-  background: #3EC1D5 none repeat scroll 0 0;
-  border: 1px solid #3EC1D5;
-  color: #fff;
-  transition: 0.4s;
-}
-
-.active>button:hover {
-  background: #333 none repeat scroll 0 0;
-  border: 1px solid #333;
-  color: #fff;
-  transition: 0.4s;
-}
-
-/*----------------------------------------
- 12.Testimonial Area Css
-----------------------------------------*/
-
-.testimonials-area {
-  background: rgba(0, 0, 0, 0) url("../img/background/slider1.jpg") no-repeat fixed center top / cover;
-  height: auto;
-  width: 100%;
-}
-
-.testi-inner {
-  position: relative;
-  width: 100%;
-  height: auto;
-  z-index: 1;
-}
-
-.testi-overly {
-  background: rgba(0, 0, 0, 0.7) none repeat scroll 0 0;
-  height: 100%;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  z-index: -1;
-}
-
-.quate {
-  border: 1px dotted #fff;
-  border-radius: 50%;
-  color: #fff;
-  display: inline-block;
-  font-size: 24px;
-  height: 70px;
-  line-height: 70px;
-  width: 70px;
-}
-
-.quate:hover {
-  color: #fff;
-}
-
-.testi-img img {
-  border: 1px dotted rgba(0, 0, 0, 0.05);
-  border-radius: 2px;
-  height: 80px;
-  margin: 0 auto;
-  padding: 5px;
-  transition: background 0.6s ease-out 0s;
-  width: 80px !important;
-}
-
-.testi-text p {
-  color: #fff;
-  font-size: 16px;
-  line-height: 1.5em;
-  margin: 20px 0;
-  letter-spacing: 1px;
-}
-
-.testi-text h6 {
-  color: #fff;
-  font-size: 20px;
-}
-
-.testimonial-carousel.owl-carousel.owl-theme .owl-controls .owl-dots div.owl-dot>span {
-  background: #fff none repeat scroll 0 0;
-  display: inline-block;
-  height: 8px;
-  width: 8px;
-  -moz-transition: 0.4s;
-  -webkit-transition: 0.4s;
-  -o-transition: 0.4s;
-  -ms-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-.testimonial-carousel.owl-carousel.owl-theme .owl-controls .owl-dots {
-  bottom: -30px;
-  display: block;
-  left: 50%;
-  margin-left: -20px;
-  position: absolute;
-}
-
-.testimonial-content {
-  margin-bottom: 15px;
-}
-
-.testimonial-carousel.owl-carousel.owl-theme .owl-controls .owl-dots div.owl-dot {
-  display: inline-block;
-  margin: 0 3px;
-}
-
-.testimonial-carousel.owl-carousel.owl-theme .owl-controls .owl-dots div.owl-dot.active span {
-  background: #3EC1D5;
-}
-
-.testi-text.text-center>h6 {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.guest-rev {
-  color: #ddd;
-  font-size: 16px;
-}
-
-.guest-rev>a {
-  color: #3EC1D5;
-  font-size: 14px;
-}
-
-/*--------------------------------*/
-
-/*  13.Blog Area
-/*--------------------------------*/
-
-.blog-area {
-  height: auto;
-  width: 100%;
-}
-
-.blog-text h4 a {
-  color: #444;
-  text-decoration: none;
-}
-
-.blog-text h4 {
-  color: #444;
-  margin-bottom: 15px;
-}
-
-.blog-btn {
-  border-bottom: 1px dotted #444;
-  color: #444;
-  text-decoration: none;
-}
-
-.blog-btn {
-  border-bottom: 1px dotted #444;
-  color: #444;
-  display: inline-block;
-  padding: 0 1px 5px 0;
-  position: relative;
-  text-decoration: none;
-}
-
-.blog-btn {
-  position: relative;
-}
-
-.blog-btn::after {
-  content: "\f178";
-  font-family: fontawesome;
-  position: absolute;
-  right: -20px;
-  top: 1px;
-  transition: all 0.3s ease 0s;
-}
-
-.blog-btn:hover::after {
-  right: -30px;
-}
-
-.blog-btn:hover {
-  color: #333;
-  text-decoration: none;
-}
-
-.blog_meta span.date_type i {
-  margin-left: 5px;
-}
-
-.blog-meta span.comments-type {
-  margin-left: 5px;
-}
-
-.blog-meta span i {
-  padding-right: 10px;
-}
-
-.blog-content .blog-meta {
-  border-bottom: 1px dotted #333;
-}
-
-.blog-meta {
-  border-bottom: 1px dotted #fff;
-  padding: 10px 0;
-}
-
-.comments-type>a, .date-type, .blog-meta span.comments-type {
-  color: #333;
-  letter-spacing: 1px;
-  margin-right: 5px;
-}
-
-.blog-meta .comments-type i {
-  padding-right: 0 !important;
-}
-
-.blog-content-right .comments-type>a, .blog-content-right .date-type, .blog-content-right .blog-meta span.comments-type, .blog-content-right .blog-text p {
-  color: #fff;
-  letter-spacing: 1px;
-}
-
-.single-blog .ready-btn {
-  border: 1px solid #444;
-  border-radius: 30px;
-  color: #444;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 15px;
-  font-weight: 500;
-  margin-top: 10px;
-  padding: 10px 20px;
-  text-align: center;
-  text-transform: uppercase;
-  transition: all 0.4s ease 0s;
-}
-
-.single-blog .ready-btn:hover {
-  border: 1px solid #3EC1D5;
-  color: #fff;
-}
 
 /*------------------------------
   13. Quote area
